--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ImpactMap.Controllers.InvestmentViewModel
 @{
     ViewBag.Title = "Create Investment";
-    
+
 }
 @*Investments create form*@
 <div class="container">
@@ -14,84 +14,104 @@
             <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
         </div>
 
-     </div>
-        @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "createInvestmentForm" }))
-        {
-            @Html.AntiForgeryToken()
+    </div>
+    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "createInvestmentForm" }))
+    {
+        @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-horizontal">
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="col-md-6">
                 @*Date field*@
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["date"] })
-                    <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["date"]"></span>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
-                    </div>
+                  
+                        @Html.LabelFor(model => model.Investment.date, htmlAttributes: new { @class = "control-label" })
+                        <span class="fa fa-question-circle tts hint" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["date"]"></span>
+                  
+                    @Html.EditorFor(model => model.Investment.date, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Investment.date, "", new { @class = "text-danger" })
                 </div>
                 @*Value field*@
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["amount"] })
-                    <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["amount"]"></span>
-                    <div class="col-md-10">
+
+                <div class="form-group inlineFormGroup">
+                    <div>
+                        @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label" })
+                        <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["amount"]"></span>
                         @Html.EditorFor(model => model.Investment.amount, new { htmlAttributes = new { @type = "number", @min = "0.01", @step = "0.01", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Investment.amount, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                @*In Kind checkbox - Marks the donation as inKind*@
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["inKind"] })
-                    <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["inKind"]"></span>
-                    <div class="col-md-10">
+                    @*In Kind checkbox - Marks the donation as inKind*@
+                    <div class="inlineElement">
+                        @Html.LabelFor(model => model.Investment.isInKind, htmlAttributes: new { @class = "control-label"})
+                        <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["inKind"]"></span>
                         <div class="checkbox">
                             @Html.EditorFor(model => model.Investment.isInKind)
                             @Html.ValidationMessageFor(model => model.Investment.isInKind, "", new { @class = "text-danger" })
                         </div>
+
                     </div>
+
                 </div>
+
 
                 @*ProjectFrom dropdown populates based on current entity, sent in via the Entities/Create GET action*@
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projectFrom"] })
+                    @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label"})
                     <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["projectFrom"]"></span>
-                    <div class="col-md-10">
-                        <select name="projectFrom_ID">
-                            <option value="0">No Project Selected</option>
-                            @foreach (var project in Model.Projects)
-                            {
-                                <option value=@project.ID>@project.name</option>
-                            }
-                        </select>
-                        @Html.ValidationMessageFor(model => model.Investment.projectFrom_ID, "", new { @class = "text-danger" })
-                    </div>
+
+                    <select name="projectFrom_ID" class="form-control">
+                        <option value="0">No Project Selected</option>
+                        @foreach (var project in Model.Projects)
+                        {
+                            <option value=@project.ID>@project.name</option>
+                        }
+                    </select>
+                    @Html.ValidationMessageFor(model => model.Investment.projectFrom_ID, "", new { @class = "text-danger" })
+
                 </div>
                 @*EntityTo dropdown -- when this dropdown changes it sends its value to the javascript below to update the projectTo dropdown*@
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["entityTo"] })
+                    @Html.LabelFor(model => model.Investment.entityTo, htmlAttributes: new { @class = "control-label"})
                     <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["entityTo"]"></span>
-                    <div class="col-md-10">
-                        <select name="entityTo_ID" id="recipientSelect">
-                            @foreach (var entity in Model.Entities)
-                            {
-                                <option value=@entity.ID>@entity.name</option>
-                            }
-                        </select>
-                    </div>
+
+                    <select name="entityTo_ID" id="recipientSelect" class="form-control">
+                        @foreach (var entity in Model.Entities)
+                        {
+                            <option value=@entity.ID>@entity.name</option>
+                        }
+                    </select>
+
                 </div>
                 @*ProjectTo dropdown populates based on the EntityTo selected above*@
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["projectTo"] })
+                    @Html.LabelFor(model => model.Investment.projectTo, htmlAttributes: new { @class = "control-label"})
                     <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["projectTo"]"></span>
-                    <div class="col-md-10">
-                        <select name="projectTo_ID" id="ProjectToDropdown"></select>
-                    </div>
+                    <select name="projectTo_ID" id="ProjectToDropdown" class="form-control"></select>
+
                 </div>
+
+            </div>
+
+            <div class="col-md-6">
+
+                @*Description input form*@
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label" })
+                    <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["ivmDescription"]"></span>
+
+
+                    @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
+
+
+                </div>
+
                 @*Categories list with checkboxes - populates using an ajax call (load_categories) below*@
                 <div class="form-group">
-                    <dd title=@ViewBag.Tooltips["categories"]>Investment Tags</dd>
+                    <label title=@ViewBag.Tooltips["categories"]>Investment Tags</label>
                     <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["categories"]"></span>
                     <div class="col-md-10">
                         <div id="CatList">
@@ -99,29 +119,27 @@
                         </div>
                         @*Hidden input field that javascript below adds stuff to, this is sent to the controller*@
                         <input name="categories" id="categories" type="hidden" />
-                        @Html.ActionLink("Add New Tag", "Create", "Categories")
+                        @*@Html.ActionLink("Add New Tag", "Create", "Categories")*@
+
+
+                        <div class="form-group">
+                            <div>
+                                <input type="button" id="submitButton" value="Create" class="button btn-default" />
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
-                @*Description input form*@
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Investment.description, htmlAttributes: new { @class = "control-label col-md-2", @title = @ViewBag.Tooltips["ivmDescription"] })
-                    <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["ivmDescription"]"></span>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Investment.description, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Investment.description, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="button" id="submitButton" value="Create" class="button btn-default" />
-                    </div>
-                </div>
-                <br />
+
+
             </div>
-        }
-       
-    </div>
+
+            <br />
+        </div>
+    }
+
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
