--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -62,69 +62,27 @@
         <div id="map" class="dashMap"></div>
     </div>
 </div>
-@*<span class="spaceDivs dbSpans">
-        <h2>My Investment Tags</h2>
-        <div>
-            <table class="table">
-                @foreach (var investment in Model.investmentsOut)
-                {
-                    foreach (var category in investment.categories)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => category.name)
-                            </td>
-                            <td>
-
-                            </td>
-                        </tr>
-
-                    }
-                }
-            </table>
-        </div>
-
-        <div class="addpadding">
-
-            @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
-        </div>
-    </span>*@
-
-@*<span class="spaceDivs dbSpans">
-    @if ( user.ID has new reports/ report requests)
-            {
-                <span style="display:block; text-align:right;">
-                    <span class="fa fa-exclamation"></span>
-                    <span class="fa fa-file-o"></span>
-                </span>
-            }
-        else
-            {
-                <span style="display:block; text-align:right;">
-                    <span class="fa fa-file-o"></span>
-                 </span>
-            }
-
-    <span style="display:block; text-align:right;">
-        <span class="fa fa-exclamation"></span>
-        <span class="fa fa-file-o"></span>
-    </span>*@
-@*</span>*@
-
 
 
 <div class="container dash">
     <div class="spaceDivs">
-       
-                <h2>Investments Sent <i class="fa fa-question-circle" aria-hidden="true" title="Here you can create and view investments to other organizations"></i></h2>
+        <div class="dashHeading">
+            <h2>Investments Sent 
+            <i class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="Here you can create and view investments to other organizations"></i>
+           </h2>
             
-        <div class="addpadding">
-
-            @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
+            <div class="buttonGroup">
+                @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
 
             @Html.ActionLink("View All Investments", "Index", "Investments", "Investments", new { @class = "button" })
 
             @Html.ActionLink("View Investment Tags", "Index", "Categories", "Categories", new { @class = "button" })
+        </div>
+        </div>
+
+        <div class="addpadding">
+
+           
 
             @if (Model.investmentsOut.Count != 0)
             {
@@ -165,7 +123,7 @@
                                 @if (item.projectTo.report != null)
                                 {
                                     //string reportID = Convert.ToString(item.projectTo.report.ID);
-                                    @Html.ActionLink("Report", "Details", "Reports", new { id = item.projectTo.report.ID }, null)
+                                    @Html.ActionLink("View Report", "Details", "Reports", new { id = item.projectTo.report.ID }, null)
                                 }
                                 else
                                 {
@@ -193,13 +151,18 @@
 
 <div class="container dash">
 
-    <div class="spaceDivs">    
-        <h2>Projects <i class="fa fa-question-circle" aria-hidden="true" title="Here you can create and view your organization's projects."></i></h2>
-        <div class="addpadding">
-
+    <div class="spaceDivs">   
+        <div class="dashHeading">
+            <h2>Projects 
+                <i class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="Here you can create and view your organization's projects."></i>
+            </h2>
+            <div class="buttonGroup">
             @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
-
             @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
+               </div>
+         </div> 
+        
+         <div class="addpadding">
 
             @if (Model.projects.Count != 0)
             {
@@ -253,11 +216,12 @@
                                 <td>
                                     @if (item.report != null)
                                     {
-                                        @Html.ActionLink("Report", "Details", "Reports", new { id = item.report.ID }, null)
+                                        @Html.ActionLink("View Report", "Details", "Reports", new { id = item.report.ID }, null)
                                     }
                                     else
                                     {
                                         @Html.ActionLink("Create Report", "Create", "Reports", new { id = item.ID }, null)
+                                        <i class="fa fa-exclamation-circle alert" aria-hidden="true"></i>
                                     }
 
                                 </td>
@@ -278,6 +242,12 @@
 </div>
 
 @section Scripts {
+
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4VlRpvKNloHrCwtMLKy_X2UQVhW_8L5Q&callback=initialize">
     </script>
     <script src="~/Scripts/googlemapsNEW.js"></script>
@@ -321,6 +291,8 @@
 
 
         </text>
+
+
     }
 
 
