--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -5,13 +5,19 @@
 }
 <div class="container">
 
-    <h2>@ViewBag.Title</h2>
-    <br /><br />
+    <div class="pageInfo">
+        <h2>@ViewBag.Title</h2>
+        <div class="subNav">
+            <a href=@Url.Action("Create", "Investments")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Investment"></i></a>
+            <a href=@Url.Action("Index", "Investments")><i class="fa fa-list-alt" aria-hidden="true" title="Investment List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+        </div>
+    </div>
+
+    <hr />
 
     <div class="addpadding" style="max-width:1200px;">
-        <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
+       
         <br />
         <table class="table">
             <tr>
@@ -41,6 +47,9 @@
                 </th>
                 <th>
                     Reports
+                </th>
+                <th>
+
                 </th>
 
             </tr>
@@ -103,10 +112,7 @@
 
         </table>
 
-        <div>
-            @Html.ActionLink("Dashboard", "Index", "Dashboard")
-        </div>
-
+        
     </div>
 
     </div>
